--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="container">
         <div class="header">
             <div class="logo">
-                <img src="/./PORTFOLIO/img/header/logo.png" alt="" height=30px width=45px>
+                <img src="/PORTFOLIO/img/header/logo.png" alt="" height=30px width=45px>
             </div>
 
             <div class="menu">
@@ -32,7 +32,7 @@
         <div class="body">
             <div class="body_top">
                 <div class="picture">
-                    <img src="/./PORTFOLIO/img/body/Chan dung.png" alt="" height="300px" width="280px">
+                    <img src="/PORTFOLIO/img/body/Chan dung.png" alt="" height="300px" width="280px">
                 </div>
                 <div class="description">
                     <p>Hello, I'm <strong>Buu Dang</strong> </p><br>
@@ -66,13 +66,13 @@
         </div>
 
         <div class="link_socialmedia">
-            <a href="https://www.facebook.com/buu.buu.9083/"><img src="/./PORTFOLIO/img/footer/facebook.png" alt=""
+            <a href="https://www.facebook.com/buu.buu.9083/"><img src="/PORTFOLIO/img/footer/facebook.png" alt=""
                     height="30px" width="30px"></a>
-            <a href="https://www.instagram.com/buubuu.u/"><img src="/./PORTFOLIO/img/footer/instagram.png" alt=""
+            <a href="https://www.instagram.com/buubuu.u/"><img src="/PORTFOLIO/img/footer/instagram.png" alt=""
                     height="30px" width="30px"></a>
-            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="/./PORTFOLIO/img/footer/linkedin.png" alt=""
+            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="/PORTFOLIO/img/footer/linkedin.png" alt=""
                     height="30px" width="30px"></a>
-            <a href="https://github.com/buubuu203"><img src="/./PORTFOLIO/img/footer/github.png" alt="" height="30px"
+            <a href="https://github.com/buubuu203"><img src="/PORTFOLIO/img/footer/github.png" alt="" height="30px"
                     width="30px"></a>
         </div>
 </footer>
