--- a/CODE/skills.html
+++ b/CODE/skills.html
@@ -19,7 +19,7 @@
     <div id="container">
         <div class="header">
             <div class="logo">
-                <img src="/PORTFOLIO/img/header/logo.png" alt="" height=30px width=45px>
+                <img src="../img/header/logo.png" alt="" height=30px width=45px>
             </div>
 
             <div class="menu">
@@ -34,7 +34,7 @@
         <div class="work_skills_top">
             <div class="sql">
                 <div class="left">
-                    <img src="/PORTFOLIO/img/body/sql.png" alt="" height=80px width="80px">
+                    <img src="../img/body/sql.png" alt="" height=80px width="80px">
                 </div>
 
                 <div class="right">
@@ -52,7 +52,7 @@
 
             <div class="html_css">
                 <div class="left">
-                    <img src="/PORTFOLIO/img/body/html.png" alt="" height=80px width="80px">
+                    <img src="../img/body/html.png" alt="" height=80px width="80px">
                 </div>
 
                 <div class="right">
@@ -72,7 +72,7 @@
         <div class="work_skills_bottom">
             <div class="english">
                 <div class="left">
-                    <img src="/PORTFOLIO/img/body/eng.png" alt="" height=80px width="80px">
+                    <img src="../img/body/eng.png" alt="" height=80px width="80px">
                 </div>
 
                 <div class="right">
@@ -89,7 +89,7 @@
 
             <div class="git">
                 <div class="left">
-                    <img src="/PORTFOLIO/img/body/git.png" alt="" height=80px width="80px">
+                    <img src="../img/body/git.png" alt="" height=80px width="80px">
                 </div>
 
                 <div class="right">
@@ -106,7 +106,7 @@
         </div>
 
         <div class="expand">
-            <img src="/PORTFOLIO/img/body/all_skills.png" alt="" height="50%" width="60%">
+            <img src="../img/body/all_skills.png" alt="" height="50%" width="60%">
         </div>
     </div>
 
@@ -126,13 +126,13 @@
         </div>
 
         <div class="link_socialmedia">
-            <a href="https://www.facebook.com/buu.buu.9083/"><img src="/PORTFOLIO/img/footer/facebook.png" alt=""
+            <a href="https://www.facebook.com/buu.buu.9083/"><img src="../img/footer/facebook.png" alt="" height="30px"
+                    width="30px"></a>
+            <a href="https://www.instagram.com/buubuu.u/"><img src="../img/footer/instagram.png" alt="" height="30px"
+                    width="30px"></a>
+            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="../img/footer/linkedin.png" alt=""
                     height="30px" width="30px"></a>
-            <a href="https://www.instagram.com/buubuu.u/"><img src="/PORTFOLIO/img/footer/instagram.png" alt=""
-                    height="30px" width="30px"></a>
-            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="/PORTFOLIO/img/footer/linkedin.png" alt=""
-                    height="30px" width="30px"></a>
-            <a href="https://github.com/buubuu203"><img src="/PORTFOLIO/img/footer/github.png" alt="" height="30px"
+            <a href="https://github.com/buubuu203"><img src="../img/footer/github.png" alt="" height="30px"
                     width="30px"></a>
         </div>
 </footer>
