--- a/CODE/projects.html
+++ b/CODE/projects.html
@@ -19,7 +19,7 @@
     <div id="container">
         <div class="header">
             <div class="logo">
-                <img src="/./PORTFOLIO/img/header/logo.png" alt="" height=30px width=45px>
+                <img src="../img/header/logo.png" alt="" height=30px width=45px>
             </div>
 
             <div class="menu">
@@ -32,14 +32,14 @@
 
     <div class="feature_projects">
         <div class="prediction">
-            <a href="https://predict.ftisu.vn/"><img class="pic" src="/PORTFOLIO/img/body/Predict.png" alt=""
-                    width="80%" height="70%">
+            <a href="https://predict.ftisu.vn/"><img class="pic" src="../img/body/Predict.png" alt="" width="80%"
+                    height="70%">
             </a>
 
         </div>
 
         <div class="bookie">
-            <a href="https://predict.ftisu.vn/"><img class="pic" src="/PORTFOLIO/img/body/Bookie.png" alt="" width="80%"
+            <a href="https://predict.ftisu.vn/"><img class="pic" src="../img/body/Bookie.png" alt="" width="80%"
                     height="70%">
             </a>
         </div>
@@ -62,13 +62,13 @@
         </div>
 
         <div class="link_socialmedia">
-            <a href="https://www.facebook.com/buu.buu.9083/"><img src="/PORTFOLIO/img/footer/facebook.png" alt=""
+            <a href="https://www.facebook.com/buu.buu.9083/"><img src="../img/footer/facebook.png" alt="" height="30px"
+                    width="30px"></a>
+            <a href="https://www.instagram.com/buubuu.u/"><img src="../img/footer/instagram.png" alt="" height="30px"
+                    width="30px"></a>
+            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="../img/footer/linkedin.png" alt=""
                     height="30px" width="30px"></a>
-            <a href="https://www.instagram.com/buubuu.u/"><img src="/PORTFOLIO/img/footer/instagram.png" alt=""
-                    height="30px" width="30px"></a>
-            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="/PORTFOLIO/img/footer/linkedin.png" alt=""
-                    height="30px" width="30px"></a>
-            <a href="https://github.com/buubuu203"><img src="/PORTFOLIO/img/footer/github.png" alt="" height="30px"
+            <a href="https://github.com/buubuu203"><img src="../img/footer/github.png" alt="" height="30px"
                     width="30px"></a>
         </div>
 </footer>
