--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         </div>
 
         <div class="link_socialmedia">
-            <a href="https://www.facebook.com/buu.buu.9083/"><img src="/PORTFOLIO/img/footer/facebook.png" alt=""
+            <a href="https://www.facebook.com/buu.buu.9083/"><img src="./img/footer/facebook.png" alt="" height="30px"
+                    width="30px"></a>
+            <a href="https://www.instagram.com/buubuu.u/"><img src="./img/footer/instagram.png" alt="" height="30px"
+                    width="30px"></a>
+            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="./img/footer/linkedin.png" alt=""
                     height="30px" width="30px"></a>
-            <a href="https://www.instagram.com/buubuu.u/"><img src="/PORTFOLIO/img/footer/instagram.png" alt=""
-                    height="30px" width="30px"></a>
-            <a href="https://www.linkedin.com/in/dangchau2003/"><img src="/PORTFOLIO/img/footer/linkedin.png" alt=""
-                    height="30px" width="30px"></a>
-            <a href="https://github.com/buubuu203"><img src="/PORTFOLIO/img/footer/github.png" alt="" height="30px"
+            <a href="https://github.com/buubuu203"><img src="./img/footer/github.png" alt="" height="30px"
                     width="30px"></a>
         </div>
 </footer>
