--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="container">
         <div class="header">
             <div class="logo">
-                <img src="/PORTFOLIO/img/header/logo.png" alt="" height=30px width=45px>
+                <img src="./img/header/logo.png" alt="" height=30px width=45px>
             </div>
 
             <div class="menu">
