--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="body">
             <div class="body_top">
                 <div class="picture">
-                    <img src="/PORTFOLIO/img/body/Chan dung.png" alt="" height="300px" width="280px">
+                    <img src="./img/body/Chan dung.png" alt="" height="300px" width="280px">
                 </div>
                 <div class="description">
                     <p>Hello, I'm <strong>Buu Dang</strong> </p><br>
