--- a/CODE/skills.html
+++ b/CODE/skills.html
@@ -23,9 +23,9 @@
             </div>
 
             <div class="menu">
-                <a href="./index.html" class="introduction">Introduction</a>
-                <a href="./CODE/skills.html" class="skills">Skills</a>
-                <a href="./CODE/projects.html" class="projects">Projects</a>
+                <a href="../index.html" class="introduction">Introduction</a>
+                <a href="../CODE/skills.html" class="skills">Skills</a>
+                <a href="../CODE/projects.html" class="projects">Projects</a>
             </div>
         </div>
     </div>
