--- a/CODE/skills.html
+++ b/CODE/skills.html
@@ -42,10 +42,13 @@
                         SQL
                     </h2>
                     <p>
-                        Certificate in SQL (Intermediate) - Hackerrank <br>
-                        Learn SQL course - Codeacademy <br> <br><br>
+                        Certificate in SQL (Intermediate) - Hackerrank <a
+                            href="https://www.hackerrank.com/certificates/5682d81995e6">View Certificate</a> <br><br>
+                        Learn SQL course - Codeacademy <a
+                            href="https://www.codecademy.com/profiles/buubuu.u/certificates/042a4e5884e3eb6ea1f2a12be6abb851">View
+                            Certificate</a> <br> <br>
                     </p>
-                    <a href="">Learn More</a>
+
                 </div>
             </div>
 
@@ -60,11 +63,14 @@
                         HTML/CSS
                     </h2>
                     <p>
-                        Certificate in HTML - Codeacademy <br>
-                        Certificate in CSS - Codeacademy <br>
-                        Can work as a front-end developer <br><br>
+                        Certificate in HTML - Codeacademy <a
+                            href="https://www.codecademy.com/profiles/buubuu.u/certificates/9eb0741e5ebef1f9f58a53bfac67d3a7">View
+                            Certificate</a> <br> <br>
+                        Certificate in CSS - Codeacademy <a href="">View Certificate</a><br> <br>
+                        <strong>Can work as a front-end developer</strong>
+
                     </p>
-                    <a href="">Learn More</a>
+
                 </div>
             </div>
         </div>
@@ -80,9 +86,11 @@
                         English
                     </h2>
                     <p>
-                        IELTS 7.0<br><br><br><br><br>
+                        IELTS 7.0 <a href="">View Certificate</a><br><br>
+                        <strong>Can use English fluently</strong>
+                        <br><br><br><br><br>
                     </p>
-                    <a href="">Learn More</a>
+
                 </div>
             </div>
 
@@ -97,10 +105,12 @@
                         Git/GitHub/Figma
                     </h2>
                     <p>
-                        Expert in using figma <br>
-                        Certificate in Git - Codeacademy<br><br><br><br>
+
+                        Certificate in Git - Codeacademy <a href="">View Certificate</a> <br><br>
+                        <strong>Expert in using figma <br><br></strong>
+
                     </p>
-                    <a href="">Learn More</a>
+
                 </div>
             </div>
         </div>
@@ -122,7 +132,7 @@
     <div class="detail_contact">
         <div class="tel_email">
             <p><strong>Gmail:</strong> chaungocbuudang2003@gmail.com</p>
-            <p><strong>Tel:</strong> 0917192580</p>
+            <p><strong>Tel:</strong> 0917192680</p>
         </div>
 
         <div class="link_socialmedia">
