--- a/CODE/skills.html
+++ b/CODE/skills.html
@@ -42,7 +42,7 @@
                         SQL
                     </h2>
                     <p>
-                        Certificate in SQL (Intermediate) - Hackerrank <a
+                        SQL (Intermediate) - Hackerrank <a
                             href="https://www.hackerrank.com/certificates/5682d81995e6">View Certificate</a> <br><br>
                         Learn SQL course - Codeacademy <a
                             href="https://www.codecademy.com/profiles/buubuu.u/certificates/042a4e5884e3eb6ea1f2a12be6abb851">View
